# api/docs/swagger.json
@@ -97,7 +97,7 @@
             }
         },
         "/admin/book/record/all": {
-            "get": {
+            "post": {
                 "description": "所有用户所有借阅图书记录",
                 "consumes": [
                     "application/json"
@@ -116,6 +116,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list all book records request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListAllBookRecordsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -135,7 +144,7 @@
             }
         },
         "/admin/book/record/borrow": {
-            "get": {
+            "post": {
                 "description": "所有用户待还图书记录",
                 "consumes": [
                     "application/json"
@@ -154,6 +163,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list all borrowed book records request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListAllBorrowedBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -173,7 +191,7 @@
             }
         },
         "/admin/book/record/return": {
-            "get": {
+            "post": {
                 "description": "所有用户已还图书记录",
                 "consumes": [
                     "application/json"
@@ -192,6 +210,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list all returned book records request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListAllReturnedBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -444,7 +471,7 @@
             }
         },
         "/book/record/all": {
-            "get": {
+            "post": {
                 "description": "所有借阅图书记录",
                 "consumes": [
                     "application/json"
@@ -463,6 +490,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list book records request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListBookRecordsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -482,7 +518,7 @@
             }
         },
         "/book/record/borrow": {
-            "get": {
+            "post": {
                 "description": "待还图书记录",
                 "consumes": [
                     "application/json"
@@ -501,6 +537,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list borrowed book request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListBorrowedBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -520,7 +565,7 @@
             }
         },
         "/book/record/return": {
-            "get": {
+            "post": {
                 "description": "已还图书记录",
                 "consumes": [
                     "application/json"
@@ -539,6 +584,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "list returned book request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ListReturnedBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -904,17 +958,50 @@
                 }
             }
         },
+        "contract.ListAllBookRecordsRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
         "contract.ListAllBookRecordsResponse": {
             "type": "object",
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
                 },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
+                },
                 "records": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/entity.Record"
                     }
+                }
+            }
+        },
+        "contract.ListAllBorrowedBookRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
                 }
             }
         },
@@ -924,6 +1011,9 @@
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
                 },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
+                },
                 "records": {
                     "type": "array",
                     "items": {
@@ -932,11 +1022,29 @@
                 }
             }
         },
+        "contract.ListAllReturnedBookRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
         "contract.ListAllReturnedBookResponse": {
             "type": "object",
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
                 },
                 "records": {
                     "type": "array",
@@ -975,11 +1083,29 @@
                 }
             }
         },
+        "contract.ListBookRecordsRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
         "contract.ListBookRecordsResponse": {
             "type": "object",
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
                 },
                 "records": {
                     "type": "array",
@@ -1016,7 +1142,22 @@
                         "$ref": "#/definitions/entity.Book"
                     }
                 },
-                "total_pages": {
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
+                }
+            }
+        },
+        "contract.ListBorrowedBookRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
                     "type": "integer"
                 }
             }
@@ -1027,6 +1168,9 @@
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
                 },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
+                },
                 "records": {
                     "type": "array",
                     "items": {
@@ -1035,11 +1179,29 @@
                 }
             }
         },
+        "contract.ListReturnedBookRequest": {
+            "type": "object",
+            "required": [
+                "page",
+                "page_size"
+            ],
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
         "contract.ListReturnedBookResponse": {
             "type": "object",
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
                 },
                 "records": {
                     "type": "array",
@@ -1094,7 +1256,15 @@
             }
         },
         "contract.ReturnBookRequest": {
-            "type": "object"
+            "type": "object",
+            "required": [
+                "book_id"
+            ],
+            "properties": {
+                "book_id": {
+                    "type": "integer"
+                }
+            }
         },
         "contract.ReturnBookResponse": {
             "type": "object",
@@ -1182,6 +1352,17 @@
                 },
                 "publisher": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.PageInfo": {
+            "type": "object",
+            "properties": {
+                "total_count": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
                 }
             }
         },
