# api/model/entity/page.go
@@ -1,0 +1,6 @@
+package entity
+
+type PageInfo struct {
+	TotalPages int32 `json:"total_pages"`
+	TotalCount int32 `json:"total_count"`
+}
